<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv"
        android:layout_marginTop="50dp"
        android:hint="@string/titles"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:inputType="text"
        android:textColorHint="#546E7A"
        android:autofillHints="" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:hint="@string/message"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#546E7A"
        android:autofillHints="" />
    <EditText
        android:id="@+id/deviceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_marginTop="10dp"
        android:hint="@string/token"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#546E7A"
        android:autofillHints="" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_marginTop="86dp"
        android:text="@string/push" />

    <Button
        android:id="@+id/sendAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/send"
        android:layout_marginTop="10dp"
        android:text="@string/push_all" />

</RelativeLayout>