<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/notification"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/app_logo"
            android:layout_alignTop="@id/app_logo"
            android:text="@string/title"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_toEndOf="@id/app_logo"
            android:layout_marginTop="8dp"
            android:text="@string/this_is_desc"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/message"
            android:layout_marginTop="16dp"
            android:text="@string/accept"/>

        <Button
            android:id="@+id/reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/accept"
            android:layout_alignBaseline="@id/accept"
            android:layout_marginStart="16dp"
            android:text="@string/reject"/>
</RelativeLayout>
